<resources>
    <string name="app_name">Reservation Enhanced</string>
    <string name="textviewName">Name</string>
    <string name="textviewPhone">Telephone</string>
    <string name="cbSmoke">Smoking</string>
    <string name="tvDay">Day</string>
    <string name="etDay">Click here to select day</string>
    <string name="etTime">Click here to select time</string>
    <string name="btnreserve">Reserve</string>
    <string name="btnreset">Reset</string>
    <string name="size">Size</string>
</resources>
